Fix div overflow for mobile screens

--- a/src/components/PlaylistCreator/playlistCreator.css
+++ b/src/components/PlaylistCreator/playlistCreator.css
@@ -1,6 +1,6 @@
 .playlist-creator {
   display: grid;
-  grid-template: 5.5rem 5rem 1fr auto / 1.5rem minmax(150px, 400px) 1px 1px minmax(150px, 400px) minmax(1rem, 1fr);
+  grid-template: 7rem 5rem 1fr auto / 1.5rem minmax(150px, 400px) 1px 1px minmax(150px, 400px) minmax(1rem, 1fr);
   gap: 0.5rem;
 }
 
@@ -11,7 +11,7 @@
 }
 
 .playlist-creator-heading h2 {
-  font-family: 'Nunito', sans-serif;
+  letter-spacing: 0.03em;
   font-weight: 800;
   font-size: 1.4rem;
   margin: 0;
@@ -30,7 +30,7 @@
 }
 
 .search-bar input {
-  width: 60%;
+  width: 70%;
   padding: 0.8rem 1rem;
   border: 1px solid #fff;
   border: .5px solid rgb(241, 241, 241);
